--- a/templates/parts/dotline.hbs
+++ b/templates/parts/dotline.hbs
@@ -56,4 +56,14 @@
   {{/forloop}}
   {{/if}}
 
+  {{#if advanceButton}}
+  <button class="advance-button gold-orbit" data-action="{{advanceButton}}">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    ADVANCE!
+  </button>
+  {{/if}}
+
 </div>
