--- a/scss/components/_dotlines.scss
+++ b/scss/components/_dotlines.scss
@@ -97,5 +97,163 @@
       .img-hover + .img-main { display: none }
       &.svg-dot { opacity: 0.5 }
     }
+
+    &.full-dot:last-of-type ~ .advance-button {
+      display: block;
+    }
+  }
+
+  .advance-button {
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    pointer-events: auto;
+    font-family: Oswald;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    // line-height: 25px;
+    z-index: 10;
+    top: 0px;
+    right: -50px;
+    height: 25px;
+    width: 85px;
+    padding: 3px 3px;
+    transition: .5s;
+
+    &.rainbow-glow {
+      background: linear-gradient(-45deg, var(--blades-gold-dark) 0%, var(--blades-gold-bright) 70%);
+      border-radius: 10px;
+      color: black;
+      outline: 2px solid var(--blades-black);
+
+      &:before {
+        content: '';
+        background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+        position: absolute;
+        top: -2px;
+        left:-2px;
+        background-size: 400%;
+        z-index: -1;
+        filter: blur(5px);
+        width: calc(100% + 4px);
+        height: calc(100% + 4px);
+        animation: glowing 20s linear infinite;
+        opacity: 0;
+        transition: opacity .3s ease-in-out;
+        border-radius: 10px;
+        z-index: -1;
+      }
+
+      &:hover:before { opacity: 1 }
+
+      &:after {
+        z-index: -1;
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(-45deg, var(--blades-gold-dark) 0%, var(--blades-gold-bright) 70%);
+        left: 0;
+        top: 0;
+        border-radius: 10px;
+        opacity: 0.5;
+      }
+
+      @keyframes glowing {
+          0% { background-position: 0 0; }
+          50% { background-position: 400% 0; }
+          100% { background-position: 0 0; }
+      }
+    }
+
+    &.gold-orbit {
+      --button-glow-color: var(--blades-gold-bright);
+
+      background: var(--blades-black);
+      color: var(--blades-white-bright);
+      // color: var(--button-glow-color);
+      box-shadow: 5px 5px 10px var(--blades-black-dark);
+      overflow: hidden;
+      transition: 0.5s;
+      animation: btn-throb 3s ease-in-out infinite;
+
+      &:hover {
+        animation-play-state: paused;
+        background: var(--button-glow-color);
+        color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 5px var(--button-glow-color),
+                    0 0 25px var(--button-glow-color),
+                    0 0 50px var(--button-glow-color),
+                    0 0 100px var(--button-glow-color);
+      }
+      span {
+        position: absolute;
+        display: block;
+
+        &:nth-child(1) {
+          top: 0;
+          left: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(90deg, transparent, var(--button-glow-color));
+          animation: btn-anim1 1s linear infinite;
+        }
+
+        &:nth-child(2) {
+          top: -100%;
+          right: 0;
+          width: 2px;
+          height: 100%;
+          background: linear-gradient(180deg, transparent, var(--button-glow-color));
+          animation: btn-anim2 1s linear infinite;
+          animation-delay: .25s
+        }
+
+        &:nth-child(3) {
+          bottom: 0;
+          right: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(270deg, transparent, var(--button-glow-color));
+          animation: btn-anim3 1s linear infinite;
+          animation-delay: .5s
+        }
+
+        &:nth-child(4) {
+          bottom: -100%;
+          left: 0;
+          width: 2px;
+          height: 100%;
+          background: linear-gradient(360deg, transparent, var(--button-glow-color));
+          animation: btn-anim4 1s linear infinite;
+          animation-delay: .75s
+        }
+      }
+      @keyframes btn-throb {
+        0% { scale: 0.9 }
+        50% { scale: 1.1 }
+        100% { scale: 0.9 }
+      }
+      @keyframes btn-anim1 {
+        0% { left: -100% }
+        50%,100% { left: 100% }
+      }
+      @keyframes btn-anim2 {
+        0% { top: -100% }
+        50%,100% { top: 100% }
+      }
+      @keyframes btn-anim3 {
+        0% { right: -100% }
+        50%,100% { right: 100% }
+      }
+      @keyframes btn-anim4 {
+        0% { bottom: -100% }
+        50%,100% { bottom: 100% }
+      }
+
+    }
   }
 }
