--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -1,7 +1,14 @@
 & {
+  // position: relative;
   overflow: visible;
 
+  .window-header {
+    position: relative;
+    z-index: 0;
+  }
+
   .window-content {
+    z-index: 1;
 
     $heights: (75px, 40px, 57px, 28px) !default;
 
@@ -19,7 +26,7 @@
       @import "../core/globals";
 
       justify-content: flex-start;
-      max-height: 100%;
+      max-height: 900px;
 
       .sheet-img {
         position: absolute;
@@ -232,8 +239,12 @@
   }
 
   .window-resizable-handle {
+    opacity: 0;
+    transition: opacity 0.5s;
     margin-right: -10px;
     margin-bottom: -10px;
+
+    &:hover { opacity: 1 }
   }
 
 }
