--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,7 +131,7 @@
       .editor:not(.tinymce) {
         position: relative;
         overflow-x: hidden;
-        height: 100%;
+        height: auto;
         width: 100%;
         min-height: var(--min-tinymce-height);
 
@@ -174,15 +174,15 @@
         }
       }
 
-      .tab-label + .editor { margin-top: -0.3125rem !important }
+      .tab-label + .editor:not(.tinymce) { margin-top: -0.3125rem !important }
 
       .editor.tinymce {
         position: relative;
         max-width: unset;
         // width: calc(100% + (2 * var(--content-padding)));
         width: 100%;
-        height: 100%;
-        min-height: var(--min-tinymce-height);
+        // height: 100%;
+        min-height: 100px;
 
         .editor-content {
           @import './tinymce/tinymce-content';
@@ -219,6 +219,10 @@
 
           &.clock-keeper {
             @import './sheets/clock-keeper-sheet'
+          }
+
+          &.gm-tracker {
+            @import './sheets/gm-tracker-sheet'
           }
 
           .window-content {
