--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -6,6 +6,7 @@
   {{!-- Sheet Container --}}
   <div class="sheet-root">
     <section class="sheet-top">
+      <input class="sheet-title shadowed" type="text" readonly value="GM Tracker">
     </section>
     <section class="sheet-mid-bar flex-vertical full-width">
       <select class="phase-select" data-dtype="String" name="system.phase">
