--- a/templates/items/playbook-sheet.hbs
+++ b/templates/items/playbook-sheet.hbs
@@ -43,7 +43,7 @@
       {{/if}}
 
       <label class="tab-label">
-        <span class="tab-title">Experience Clues</span>
+        <span class="tab-title">Experience Triggers</span>
       </label>
       {{#each system.experience_clues as |clue|}}
         {{#if (test ../isGM "||" (test this "!==" " "))}}
